# django-skeleton

./: .gitignore  .pre-commit-config.yaml  .pylintrc  commands.txt  pyproject.toml
core/: settings.py
