[project]
name = "django-starter"
version = "0.1.0"
description = ""
authors = [
    {name = "Haroon",email = "haroonasifmalik123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.1,<6.0.0)"
]

[tool.poetry]
packages = [{include = "django_starter", from = "src"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
